# video-loop-server

./: .gitignore  Makefile  README.md  convert.sh  meson.build  vls.service.example  vls@.service.in
docker/: Dockerfile
src/: rtsp.h  vls.c  vls_rtsp.c  vls_rtsp.h
